ICP-15 : Corrections responsive et cursor pointer sur event collapsé

--- a/src/app/components/add-event-list/add-event-item/add-event-item.component.scss
+++ b/src/app/components/add-event-list/add-event-item/add-event-item.component.scss
@@ -8,6 +8,7 @@ textarea {
 .collapsed-title{
 
     transition: 0.3s;
+    cursor: pointer;
 
     &:hover{
         background-color: $gray !important;
